src/objects/AccountPriceBookMember__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountPriceBookMembers</relationshipLabel>
        <relationshipName>AccountPriceBookMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountPriceBookEntry__c</fullName>
        <label>PriceBookEntry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceBookId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PriceBookId</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>AccountPriceBookMembers</relationshipLabel>
        <relationshipName>AccountPriceBookMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>AccountPriceBookMember</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>apm-{00000000}</displayFormat>
        <label>AccountPriceBookMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountPriceBookMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>